Optimise functional case implements